--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="game">
         <div id="output"></div>
-        <input type="text" id="command" placeholder="Enter your command" />
+        <input type="text" id="command" placeholder="Enter command" />
     </div>
     <script src="script.js"></script>
 </body>
