Changed name, added ability to unlock door

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <!-- Start Menu -->
     <div id="start-menu">
-        <h1>Memory's Edge</h1>
+        <h1>Snork</h1>
         <button id="play-btn">Play</button><br>
         <button id="how-to-play-btn">How to Play</button>
     </div>
