--- a/index.html
+++ b/index.html
@@ -28,22 +28,24 @@
         }
 
         #output { 
-            min-height: 300px; 
+            min-height: 200px; 
             padding-left: 10px;
             padding-right: 10px;
-            padding-top: 10px;
+            padding-top: 20px;
             white-space: pre-wrap;
             background-color: #222;
-            padding-top: 20px;
-            margin-bottom: 16px;
+            margin-bottom: 15px;
+            margin-top: 15px;
             color: #fff;
         }
 
         #location-image {
             display: block;
             margin: 0 auto 20px auto;
+            border: 2px solid #757575; 
             width: 100%;
             max-width: 600px;
+            aspect-ratio: 16 / 9;
             border-radius: 10px;
         }
 
