Fixed conditions for opening final door

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 
         // Event listener for How-to-play
         howToPlayButton.addEventListener('click', () => {
-            alert("There is something out there, in the dark\n\n" +
-                "- Navigate through this mysterious place with directions 'north', 'south', 'west', 'east'.\n" +
-                "- Discover items and interact with your surroundings with 'take', 'use' and 'exit'.\n");
+            alert("What is this place? I can't remember...\n\n" +
+                "- Navigate through this mysterious place of Snork, with directions 'north', 'south', 'west', 'east'.\n" +
+                "- Discover items and interact with your surroundings with 'take', 'use', 'enter, and 'exit'.\n");
         });
     </script>
 
